tests/ui/type-alias-impl-trait/nested-tait-inference3.stderr
error: item does not constrain `FooX::{opaque#0}`
  --> $DIR/nested-tait-inference3.rs:13:4
   |
LL | fn foo() -> impl Foo<FooX> {
   |    ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/nested-tait-inference3.rs:6:13
   |
LL | type FooX = impl Debug;
   |             ^^^^^^^^^^

error: aborting due to 1 previous error

